--- a/image-processing.ipynb
+++ b/image-processing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNvxEUvNvEK+CuR40/MPICe",
+      "authorship_tag": "ABX9TyNr4j4PXsqYwKtdU6T/yqcF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,6 +121,38 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## Creating model "
+      ],
+      "metadata": {
+        "id": "gAdY2mV99AEf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from keras.layers import Dense, Conv2D, AveragePooling2D, Flatten \n",
+        "from keras.models import Sequential"
+      ],
+      "metadata": {
+        "id": "FjbHjwlk96nB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8VD6z0qG-Ci3"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
